src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_fb_inst_and_function.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: foo: Ambiguous callable symbol.
   ┌─ <internal>:7:17
   │
 7 │                 foo: FooFB;
   │                 ^^^ foo: Ambiguous callable symbol.
   ·
10 │             FUNCTION foo: INT
   │                      --- see also

error[E004]: foo: Ambiguous callable symbol.
   ┌─ <internal>:10:22
   │
 7 │                 foo: FooFB;
   │                 --- see also
   ·
10 │             FUNCTION foo: INT
   │                      ^^^ foo: Ambiguous callable symbol.
